# yeelight-iot-mcp

./: .gitignore  NOTICE  README.md  README.zh-CN.md  README_CN.md  README_EN.md  main.py  pyproject.toml  service.sh
.github/workflows/: ci.yml
guides/: integration.md  integration.zh-CN.md  usage.md  usage.zh-CN.md
readme/: README_CN.md  README_EN.md
src/config/: config.py  yeelight_ai.py
src/log/: logger.py
src/middleware/: auth.py
src/register/: register.py
src/service/: mcp_service.py  model.py  pagination.py  request_context.py  safety.py
src/utils/: auth.py  http.py
tests/: test_auth.py  test_auth_claims.py  test_cloud_safety.py  test_config.py  test_main.py  test_mcp_context.py  test_region.py  test_request_context.py  test_yeelight_ai_config.py
